--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 main: pl.ibcgames.mclvotifier.Votifier
-name: MCL-Votifier
-authors: [kaziu687, kisi69]
-website: https://minecraft-servers.gg
-version: @version@
+name: MCL-Votifier-OG
+authors: [kaziu687, kisi69, notalexnoyle]
+website: https://github.com/true-og/MCL-Votifier-OG
+version: '${version}'
+api-version: '${apiVersion}'
 commands:
   mcl-test:
     description: Test vote reward's commands
