Add live TrueOG Network config file

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,16 +1,15 @@
 # Tutorial about configuring this plugin can be found at:
 # https://minecraft-servers.gg/mcl-votifier-plugin
-server_id: paste_server_id_here
+server_id: ^{MCL_VOTIFIER_ID}
 
 # If you want to restrict some users from claiming a reward with /mcl-reward command you can enable "reqire_permission" feature
 #   false - /mcl-reward command will be available for every player
 #   true - /mcl-reward command will be enabled only for players with mclvotifier.reward permission
-require_permission: false
+require_permission: true
 
 # Commands that will be executed when user claim a reward
 # If you need to test reward you can use /mcl-test command (only for OPs!)
 # {PLAYER} will be replaced with /mcl-reward command sender's username
 commands_on_reward:
-  - "give {PLAYER} stone 10"
-  - "say {PLAYER} voted at Minecraft-Servers.gg!"
-  - "say Use /mcl-vote command if you want to vote"
+  - "xp add {PLAYER} 15"
+  - "say {PLAYER} voted for &aTrue&4OG &eNetwork &rat Minecraft-Servers.gg!"
